# coin_game_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI_of_source.yml  CI_of_tests.yml  black.yml  flake8.yml  mypy.yml
src/: main.py
src/core/: config.py
src/core/registries/: __init__.py  abstract_db_helper.py  abstract_registry.py
src/core/registries/mongo/: async_mongo_helper.py  mongo_registry.py
src/core/services/: __init__.py  coin.py
src/routers/: __init__.py  coin.py  dependencies.py  exceptions.py  game_rules.py
src/schemes/: __init__.py  coin.py  distribution.py  player.py  utils.py
